test/TestSuite/TestAlts.ATG
$01246
/*-------------------------------------------------------------------------
Test of alternatives in productions.
----------------------------------------------------------------------------*/
COMPILER Test

TOKENS
  a = "a".
  b = "b".
  c = "c".
  d = "d".
  e = "e".
  f = "f".

PRODUCTIONS

Test = a A b.
A    = (a | (b|c|) | d) e.

END Test.
